--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ asgiref==3.5.0
 beautifulsoup4==4.10.0
 Django==4.0.2
 django-bootstrap5==21.3
+django-fontawesome-6==1.0.0.0
 soupsieve==2.3.1
 sqlparse==0.4.2
